[gd_scene load_steps=3 format=3 uid="uid://e6xopr3y6ncm"]

[ext_resource type="Script" uid="uid://cycvhpbjm8qef" path="res://scripts/inventory/inventory.gd" id="1_45f7y"]
[ext_resource type="PackedScene" uid="uid://tn8pea20bper" path="res://scripts/inventory/slot/inventory_slot.tscn" id="2_pjs63"]

[node name="Inventory" type="Control"]
z_index = 100
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_45f7y")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -31.0
offset_top = 116.0
offset_right = 2016.0
offset_bottom = 890.0

[node name="GridContainer" type="GridContainer" parent="."]
clip_contents = true
layout_direction = 2
layout_mode = 0
offset_left = 975.0
offset_top = 349.0
offset_right = 1379.0
offset_bottom = 617.0
scale = Vector2(1.77747, 1.80361)
columns = 6

[node name="InventorySlot" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot2" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot3" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot4" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot5" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot6" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot7" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot8" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot9" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot10" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot11" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot12" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot13" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot14" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot15" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot16" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot17" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot18" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot19" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot20" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot21" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot22" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot23" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventorySlot24" parent="GridContainer" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="EquipmentSlots" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 236.0
offset_top = 205.0
offset_right = 300.0
offset_bottom = 541.0
scale = Vector2(2, 2)

[node name="HelmetSlot" parent="EquipmentSlots" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="ArmorSlot" parent="EquipmentSlots" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="HandsSlot" parent="EquipmentSlots" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="LeggingsSlot" parent="EquipmentSlots" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="WeaponSlot" parent="EquipmentSlots" instance=ExtResource("2_pjs63")]
layout_mode = 2

[node name="InventoryLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1244.0
offset_top = 259.0
offset_right = 1319.0
offset_bottom = 282.0
scale = Vector2(2.42465, 2.47637)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Inventory"

[node name="EquippedLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 135.0
offset_right = 289.0
offset_bottom = 158.0
scale = Vector2(2.35236, 2.38895)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Equipped"
